--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "mini-css-extract-plugin": "^2.4.4",
     "mocha": "^10.0.0",
     "nanoassert": "^2.0.0",
-    "ol": "^7.2.2",
+    "ol": "^7.2.3-dev.1672696068643",
     "puppeteer": "^19.2.2",
     "remove-flow-types-loader": "^1.1.0",
     "rollup": "^2.70.2",
