Make ol a dependency instead of dev dependency

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-style-spec": "^13.23.1",
-    "mapbox-to-css-font": "^2.4.1"
+    "mapbox-to-css-font": "^2.4.1",
+    "ol": "^7.3.0"
   },
   "devDependencies": {
     "@mapbox/flow-remove-types": "^2.0.0",
@@ -74,7 +75,6 @@
     "mini-css-extract-plugin": "^2.4.4",
     "mocha": "^10.0.0",
     "nanoassert": "^2.0.0",
-    "ol": "^7.3.0",
     "puppeteer": "^20.2.0",
     "remove-flow-types-loader": "^1.1.0",
     "rollup": "^2.70.2",
