--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test": "npm run karma -- --single-run --log-level error"
   },
   "dependencies": {
-    "@mapbox/mapbox-gl-style-spec": "^13.23.1",
+    "@mapbox/mapbox-gl-style-spec": "13.17.1",
     "mapbox-to-css-font": "^2.4.1",
     "ol": "^7.3.0"
   },
