--- a/package.json
+++ b/package.json
@@ -82,10 +82,10 @@
     "should": "^13.2.3",
     "sinon": "^15.0.1",
     "style-loader": "^3.3.1",
-    "typedoc": "0.24.x",
+    "typedoc": "^0.25.1",
     "typedoc-plugin-markdown": "^3.15.2",
     "typedoc-plugin-missing-exports": "^2.0.0",
-    "typescript": "^5.1.3",
+    "typescript": "^5.2.2",
     "webpack": "^5.62.1",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.4.0"
