--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "mini-css-extract-plugin": "^2.4.4",
     "mocha": "^10.0.0",
     "nanoassert": "^2.0.0",
+    "pmtiles": "^3.2.0",
     "puppeteer": "^23.0.2",
     "remove-flow-types-loader": "^1.1.0",
     "rollup": "^2.70.2",
