--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
+      "import": "./src/index.js",
       "require": "./dist/olms.js"
     }
   },
@@ -30,7 +30,7 @@
   "scripts": {
     "start": "webpack serve --config ./webpack.config.examples.cjs",
     "prepare": "npm run doc && npm run build",
-    "build": "tsc --project tsconfig-build.json && rollup -c && cross-env esm=true rollup -c && webpack-cli --mode=production --config ./webpack.config.examples.cjs",
+    "build": "tsc --project tsconfig-build.json && rollup -c && webpack-cli --mode=production --config ./webpack.config.examples.cjs",
     "doc": "typedoc --plugin typedoc-plugin-markdown --plugin typedoc-plugin-missing-exports src/index.js --readme none --excludeExternals --preserveAnchorCasing --hideBreadcrumbs --disableSources --tsconfig tsconfig-typecheck.json && npx concat-md docs --hide-anchor-links=false | npx add-text-to-markdown README.md --section \"API\" --write",
     "karma": "karma start test/karma.conf.cjs",
     "lint": "eslint test examples src",
@@ -39,14 +39,13 @@
     "test": "npm run karma -- --single-run --log-level error"
   },
   "dependencies": {
-    "@mapbox/mapbox-gl-style-spec": "^13.23.1",
+    "@maplibre/maplibre-gl-style-spec": "^23.1.0",
     "mapbox-to-css-font": "^2.4.1"
   },
   "peerDependencies": {
     "ol": "*"
   },
   "devDependencies": {
-    "@mapbox/flow-remove-types": "^2.0.0",
     "@openlayers/eslint-plugin": "^4.0.0",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -78,10 +77,8 @@
     "nanoassert": "^2.0.0",
     "pmtiles-protocol": "^1.0.1",
     "puppeteer": "^23.10.4",
-    "remove-flow-types-loader": "^1.1.0",
     "rollup": "^2.70.2",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-unassert": "^0.6.0",
     "should": "^13.2.3",
     "sinon": "^18.0.0",
     "style-loader": "^4.0.0",
