--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "mocha": "^11.1.0",
     "nanoassert": "^2.0.0",
     "pmtiles-protocol": "^1.0.1",
+    "proj4": "^2.15.0",
     "puppeteer": "^23.10.4",
     "rollup": "^2.70.2",
     "rollup-plugin-terser": "^7.0.2",
