--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
+          name: 'github-pages'
           path: '.docs/'
       - name: Deploy to GitHub Pages
         id: deployment
