--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@openlayers/eslint-plugin": "^4.0.0",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/arcgis-rest-api": "^10.4.4",
     "@types/mocha": "^10.0.0",
     "@types/offscreencanvas": "^2019.6.4",
@@ -78,7 +79,6 @@
     "proj4": "^2.15.0",
     "puppeteer": "^24.2.0",
     "rollup": "^4.34.6",
-    "rollup-plugin-terser": "^7.0.2",
     "should": "^13.2.3",
     "sinon": "^18.0.0",
     "style-loader": "^4.0.0",
